Add build output, use skipLibCheck

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-    "include": [
-        "./src/**/*",
-    ],
-    "compilerOptions": {
-        "rootDir": "src",
-        "outDir": "./lib",
-    }
+  "include": [
+    "./src/**/*",
+  ],
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "./lib",
+    "skipLibCheck": true,
+  }
 }
